--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,35 +1,23 @@
  /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-      /*#map {*/
-        /*height: 100%;*/
-      /*}*/
-      /*!* Optional: Makes the sample page fill the window. *!*/
-      /*html, body {*/
-        /*height: 100%;*/
-        /*margin: 0;*/
-        /*padding: 0;*/
-      /*}*/
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+
       #floating-panel {
         position: absolute;
-        top: 10px;
-        left: 25%;
+        top: 2%;
+        left: 5%;
         z-index: 5;
         background-color: #fff;
         padding: 5px;
         border: 1px solid #999;
+        border-radius: 15px;
         text-align: center;
         font-family: 'Roboto','sans-serif';
         line-height: 30px;
         padding-left: 10px;
-      }
-      #floating-panel {
-        background-color: #fff;
-        border: 1px solid #999;
-        left: 25%;
-        padding: 5px;
-        position: absolute;
-        top: 10px;
-        z-index: 5;
       }
 
       #floating-header {
@@ -38,7 +26,7 @@
         left: 65%;
         background-color: #fff;
         border: 0.25px solid #999;
-        border-radius: 25px;
+        border-radius: 15px;
         z-index: 5;
         padding: 5px;
         text-align: center;
