--- a/templates/base.html
+++ b/templates/base.html
@@ -17,17 +17,17 @@
 	<nav class="navbar navbar-inverse">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">Hack-a-Bird</a>
+	      <a class="navbar-brand" href="#">BirdWatch</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="active"><a href="#">Home</a></li>
-	      <li><a href="#">Bird Map</a></li>
-	      <li><a href="#">Data Analysis</a></li>
-	      <li><a href="#">Input</a></li>
+	      <li class="active"><a href="/">Home</a></li>
+	      <li><a href="/map">Bird Map</a></li>
+	      <li><a href="/birdvstemp">Data Analysis</a></li>
+	      <li><a href="/data/upload">Input</a></li>
 	    </ul>
 	    <ul class="nav navbar-nav navbar-right">
-	      <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-	      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+	      <li><a href="/account/register"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+	      <li><a href="/account/login"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
 	    </ul>
 	  </div>
 	</nav>
