--- a/templates/main_visual/birdvstemp.html
+++ b/templates/main_visual/birdvstemp.html
@@ -1,22 +1,30 @@
+{% extends 'base.html' %}
+
+{% block extrahead %}
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
+{% endblock %}
 
-<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+{% block content %}
+<div id="container1" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+<div id="container2"></div>
+{% endblock %}
 
+{% block extrascripts %}
 <script>
-    Highcharts.chart('container', {
+    Highcharts.chart('container1', {
     chart: {
         zoomType: 'xy'
     },
     title: {
-        text: 'Average Monthly Weather Data for Tokyo'
+        text: 'Trendline Indicating &Delta Bird Count and &DeltaTemperature'
     },
     subtitle: {
-        text: 'Source: WorldClimate.com'
+        text: ''
     },
     xAxis: [{
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-            'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+        categories: ['1994-95', '1995-96', '1996-97', '1997-98', '1998-99', '1999-00', '2000-01',
+            '2001-02', '2002-03', '2003-04'],
         crosshair: true
     }],
     yAxis: [{ // Primary yAxis
@@ -29,7 +37,7 @@
         title: {
             text: 'Temperature',
             style: {
-                color: Highcharts.getOptions().colors[2]
+                color: "green"
             }
         },
         opposite: true
@@ -37,33 +45,18 @@
     }, { // Secondary yAxis
         gridLineWidth: 0,
         title: {
-            text: 'Rainfall',
+            text: 'Bird Count',
             style: {
-                color: Highcharts.getOptions().colors[0]
+                color: 'blue'
             }
         },
         labels: {
-            format: '{value} mm',
+            format: '{value}',
             style: {
                 color: Highcharts.getOptions().colors[0]
             }
         }
 
-    }, { // Tertiary yAxis
-        gridLineWidth: 0,
-        title: {
-            text: 'Sea-Level Pressure',
-            style: {
-                color: Highcharts.getOptions().colors[1]
-            }
-        },
-        labels: {
-            format: '{value} mb',
-            style: {
-                color: Highcharts.getOptions().colors[1]
-            }
-        },
-        opposite: true
     }],
     tooltip: {
         shared: true
@@ -78,10 +71,11 @@
         backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF'
     },
     series: [{
-        name: 'Sea-Level Pressure',
+        name: 'Bird Count',
         type: 'spline',
-        yAxis: 2,
-        data: [1016, 1016, 1015.9, 1015.5, 1012.3, 1009.5, 1009.6, 1010.2, 1013.1, 1016.9, 1018.2, 1016.7],
+        yAxis: 1,
+        data: [0.12477718, 0.37433155, 1.00000000, 0.00000000, 0.80570410, 0.18716578, 0.55436720, 0.02673797
+,0.64171123],
         marker: {
             enabled: false
         },
@@ -93,7 +87,7 @@
     }, {
         name: 'Temperature',
         type: 'spline',
-        data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
+        data: [0.6260062, 0.8284830, 0.0000000, 0.9808050, 0.4408669, 0.3399381, 0.4718266, 1.0000000, 0.1938080],
         tooltip: {
             valueSuffix: ' °C'
         }
@@ -102,3 +96,54 @@
 
 
 </script>
+
+<script>
+    Highcharts.chart('container2', {
+
+    title: {
+        text: 'Migration Pattern'
+    },
+
+    subtitle: {
+        text: ''
+    },
+
+    yAxis: {
+        title: {
+            text: 'Bird Count'
+        }
+    },
+        xAxis: {
+        title: {
+            text: 'Month'
+        },
+            categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul',
+            'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+    },
+    legend: {
+        layout: 'vertical',
+        align: 'right',
+        verticalAlign: 'middle'
+
+    },
+
+    series: [{
+        name: 'Bluethroat',
+        data: [110158, 84255, 15472, 13199, 887, 1653, 6959, 738, 6418, 21473, 61244, 98217]
+    }, {
+        name: 'Common Kingfisher',
+        data: [343320, 286520, 121399, 81446, 67659, 49196, 54360, 66887, 63377, 119619, 212959, 250456]
+    }, {
+        name: 'Eurasian Sparrowhawk',
+        data: [11759, 12729, 6145, 4083, 1435, 2084, 748, 630, 1430, 9243, 10299, 13543]
+    }, {
+        name: 'Greater Flamingo',
+        data:  [103527, 85387, 32841, 37389, 30676, 18431, 17372, 24354, 25866, 43076, 46942, 76714]
+    }, {
+        name: 'Indian Peafowl',
+        data: [503979, 672307, 263012, 218992, 244403, 189980, 250030, 336563, 237632, 270323, 362624, 335403]
+    }]
+
+});
+</script>
+{% endblock %}
