--- a/templates/main_visual/filter.html
+++ b/templates/main_visual/filter.html
@@ -4,81 +4,25 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Circles</title>
-
-      <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-      <!--<script type="text/javascript" src="http://www.bdcc.co.uk/Gmaps/v3_ll_grat.js"></script>-->
-      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script>$( function() {
-            $( "#datepicker1, #datepicker2").datepicker({
-              changeMonth: true,
-              changeYear: true
-            });
-       } );</script>
-	<script defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbLDaUFsoSUH9Dx4R9eDVovC9Ldsky_UQ&callback=initMap">
-    </script>
-
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
-<script>
-  var csrftoken = $.cookie('csrftoken');
-  function csrfSafeMethod(method) {
-    // these HTTP methods do not require CSRF protection
-    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-  }
-  $.ajaxSetup({
-    beforeSend: function(xhr, settings) {
-      if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-      }
-    }
-  });
-  $(document).ready(function(){
-     $("#mydiv").html("HEllo");
-  $('#upload').click(function(e){
-    e.preventDefault();
-    $.post('/data/upload/',
-      {
-        id: $(this).data('id'),
-{#        action: $(this).data('action')#}
-      },
-      function(data){
-        if (data['status'] == 'ok')
-        {
-          $("#mydiv").html("Hello World!");
-        }
-        else{
-            $("#mydiv").html("Bello");
-    }
-      }
-    );
-  });
-  });
-</script>
-
-
-    <style>#map {
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
         height: 100%;
       }
       /* Optional: Makes the sample page fill the window. */
-              html, body {
+      html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
-
-    body {
-        overflow-x: hidden;
-    }
-
-      #floating-header {
+        #floating-header {
         position: absolute;
-        top: 65%;
-        left: 63%;
+        top: 70%;
+        left: 65%;
         background-color: #fff;
         border: 0.25px solid #999;
-        border-radius: 15px;
+        border-radius: 25px;
         z-index: 5;
         padding: 5px;
         text-align: center;
@@ -86,55 +30,20 @@
         line-height: 30px;
         padding-left: 10px;
       }
-        .text {
-              margin: 5px 5px;
-              padding: 1px;
-              width: 230px;
-           }
-
-        .t50 {
-            width: 100px;
-        }
-
-        .button {
-            padding: 0px 15px;
-            margin: 5px 0px;
-        }
-
-        .button:hover {
-            padding: 4px 18px;
-            background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7),rgba(0,0,0,0.4));
-            color: white;
-            border-radius: 10px;
-            font-weight: bolder;
-            border: 1px black solid;
-            
-        }
-        .fl_h{
-            margin: 5px 10px;
-            color:#8612C9;
-            width: 300px;
-        }
     </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../static/css/map.css">
   </head>
   <body>
 {#	<div id="floating-panel">#}
-{#               #}
-{#                 <form class="f1">#}
-{#                    <div class="f2">#}
-{#                    <input id="species_field" class="text" type="text"  placeholder="Type species name">#}
-{#                  </div>#}
-{#                  <div class="f2">#}
-{#                    <input id="datepicker1" class="text t50" type="text"  placeholder="From">#}
-{#                    <input id="datepicker2" class="text t50" type="text"  placeholder="To">#}
-{#                  </div>s#}
-{#                  #}
-{#                  <button type="submit" class="button">Filter</button>#}
-{#                </form>#}
-{#    </div>#}
-    <div id="floating-header">
-      <h4 class="fl_h">Recorded Bird Observations in India</h4>
-	</div>
+{#      <button onclick="filterByMonth('Jan')">Jan</button>#}
+{#      <button onclick="filterByMonth('Feb')">Feb</button>#}
+{#      <button onclick="filterByMonth('Mar')">March</button>#}
+{#      <button onclick="showAll()">All</button>#}
+{#    	</div>#}
+	    <div id="floating-header">
+	      <h4 style="color:#8612C9"> Recorded Bird Observations <br></h4>
+        </div>
     <div id="map"></div>
     <script>
       // This example creates circles on the map, representing populations in North
@@ -145,289 +54,323 @@
       var circles = [];
       var showOpacity = 0.3;
       var hideOpacity = 0.0;
-      var map;
 
       function initMap() {
-		 map = new google.maps.Map(document.getElementById('map'), {
+	var citymap;
+	var url_json = "/media/sider.json";
+	$.getJSON(url_json, function(result){
+		citymap = result;
+
+                console.log(citymap.length);
+		var map = new google.maps.Map(document.getElementById('map'), {
 		  zoom: 5,
 		  center: {lat: 22.5937, lng: 78.9629},
 		  styles: [
-              {
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#f5f5f5"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.icon",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#616161"
-                  }
-                ]
-              },
-              {
-                "elementType": "labels.text.stroke",
-                "stylers": [
-                  {
-                    "color": "#f5f5f5"
-                  }
-                ]
-              },
-              {
-                "featureType": "administrative.country",
-                "elementType": "geometry.stroke",
-                "stylers": [
-                  {
-                    "color": "#bec8ca"
-                  },
-                  {
-                    "weight": 1.5
-                  }
-                ]
-              },
-              {
-                "featureType": "administrative.land_parcel",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#bdbdbd"
-                  }
-                ]
-              },
-              {
-                "featureType": "administrative.neighborhood",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "administrative.province",
-                "elementType": "geometry.stroke",
-                "stylers": [
-                  {
-                    "color": "#a6be9e"
-                  },
-                  {
-                    "weight": 1
-                  }
-                ]
-              },
-              {
-                "featureType": "poi",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#eeeeee"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi",
-                "elementType": "labels.text",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#757575"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi.business",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi.park",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#e5e5e5"
-                  }
-                ]
-              },
-              {
-                "featureType": "poi.park",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              },
-              {
-                "featureType": "road",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "road",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#ffffff"
-                  }
-                ]
-              },
-              {
-                "featureType": "road",
-                "elementType": "labels.icon",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.arterial",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#757575"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.highway",
-                "elementType": "geometry",  
-                "stylers": [
-                  {
-                    "color": "#dadada"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.highway",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#616161"
-                  }
-                ]
-              },
-              {
-                "featureType": "road.local",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              },
-              {
-                "featureType": "transit",
-                "stylers": [
-                  {
-                    "visibility": "off"
-                  }
-                ]
-              },
-              {
-                "featureType": "transit.line",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#e5e5e5"
-                  }
-                ]
-              },
-              {
-                "featureType": "transit.station",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#eeeeee"
-                  }
-                ]
-              },
-              {
-                "featureType": "water",
-                "elementType": "geometry",
-                "stylers": [
-                  {
-                    "color": "#c9c9c9"
-                  }
-                ]
-              },
-              {
-                "featureType": "water",
-                "elementType": "labels.text.fill",
-                "stylers": [
-                  {
-                    "color": "#9e9e9e"
-                  }
-                ]
-              }
-            ]
+  {
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#f5f5f5"
+      }
+    ]
+  },
+  {
+    "elementType": "labels",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.icon",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#616161"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.text.stroke",
+    "stylers": [
+      {
+        "color": "#f5f5f5"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.country",
+    "elementType": "geometry.stroke",
+    "stylers": [
+      {
+        "color": "#bec8ca"
+      },
+      {
+        "weight": 1.5
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.land_parcel",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#bdbdbd"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.neighborhood",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.province",
+    "elementType": "geometry.stroke",
+    "stylers": [
+      {
+        "color": "#a6be9e"
+      },
+      {
+        "weight": 1
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "labels.text",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#757575"
+      }
+    ]
+  },
+  {
+    "featureType": "poi.business",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "poi.park",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#e5e5e5"
+      }
+    ]
+  },
+  {
+    "featureType": "poi.park",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  },
+  {
+    "featureType": "road",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#ffffff"
+      }
+    ]
+  },
+  {
+    "featureType": "road",
+    "elementType": "labels.icon",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.arterial",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#757575"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#dadada"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#616161"
+      }
+    ]
+  },
+  {
+    "featureType": "road.local",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  },
+  {
+    "featureType": "transit",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "transit.line",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#e5e5e5"
+      }
+    ]
+  },
+  {
+    "featureType": "transit.station",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
+      }
+    ]
+  },
+  {
+    "featureType": "water",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#c9c9c9"
+      }
+    ]
+  },
+  {
+    "featureType": "water",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  }
+]
 
 		});
-    }
 
-
-	var circles = [];
-	
-	function repopulate(jsonloc){
-            circles.forEach(function(c){
-                    c.setMap(null);
-	     });
-            circles = [];
-             console.log(jsondata.length);
-		var circle;
-		for (var loc in jsonloc) {
-		    circle = new google.maps.Circle({
+		// Construct the circle for each value in citymap.
+		// Note: We scale the area of the circle based on the population.
+		var cityCircle;
+		console.log(citymap.length);
+		for (var city in citymap) {
+		  cityCircle = new google.maps.Circle({
 		    strokeColor: '#8612C9',
 		    strokeOpacity: 0.0,
 		    strokeWeight: 2,
 		    fillColor: '#8612C9',
 		    fillOpacity: showOpacity,
 		    map: map,
-		    center: {lat:jsonloc[loc].latitude, lng:jsonloc[loc].longitude},
-		    radius: 200*jsonloc[loc].count
+		    center: {lat:citymap[city].latitude, lng:citymap[city].longitude},
+		    radius: 20000,
+                    day_no: citymap[city].day_no,
+                    month_name: citymap[city].month_name,
+                    year: citymap[city].year,
+                    show: true
 		  });
 
 		    circles.push(cityCircle);
-		   
+
 		}
-	   
+
+	});
+     }
+
+
+	function showByMonth(month_name) {
+             circles.forEach(function(c){
+		if(c.month_name==month_name)
+                    c.setOptions({fillOpacity:showOpacity});
+	     });
 	}
 
-        
+        function hideByMonth(month_name) {
+             circles.forEach(function(c){
+		if(c.month_name!=month_name)
+                    c.setOptions({fillOpacity:hideOpacity});
+	     });
+	}
+
+        function filterByMonth(month_name) {
+             circles.forEach(function(c){
+		if(c.month_name==month_name)
+                    c.setOptions({fillOpacity:showOpacity});
+                else
+                    c.setOptions({fillOpacity:hideOpacity});
+	     });
+	}
+
+        function showAll() {
+             circles.forEach(function(c){
+                 c.setOptions({fillOpacity:showOpacity});
+	     });
+	}
+
 
     </script>
-    
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbLDaUFsoSUH9Dx4R9eDVovC9Ldsky_UQ&callback=initMap">
+    </script>
   </body>
 </html>
